# capitani

./: .gitignore  README.md  docker-compose.yaml
api/: Dockerfile  docker-entrypoint.sh  main.py  piccolo_conf.py  pyproject.toml  settings.py
api/app/: piccolo_app.py
api/app/controllers/: product.py
api/app/domain/: product.py
api/app/lib/: __init__.py  kafka.py
api/app/piccolo_migrations/: app_2024_06_28t01_43_45_264128.py
scheduler/: Dockerfile  main.py  pyproject.toml
scheduler/common/: aiohttp.py  settings.py
scheduler/models/: product.py
