[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["LivioMirandaJr <livio_1990@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = "^2.9.1"
litestar-piccolo = "^0.1.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.3.4"
confluent-kafka = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
